--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,12 @@
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
+	<queries>
+		<intent>
+			<action android:name="android.intent.action.VIEW" />
+		</intent>
+	</queries>
+
 	<application
 		android:allowBackup="true"
 		android:icon="@mipmap/ic_launcher"
@@ -39,7 +45,8 @@
 		<activity
 			android:name="jp.ddo.hotmist.unicodepad.UnicodeActivity"
 			android:label="@string/app_name"
-			android:windowSoftInputMode="adjustResize">
+			android:windowSoftInputMode="adjustResize"
+			android:exported="true">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 
